--- a/docs/getting-started/install-rt-kernel-i386.asciidoc
+++ b/docs/getting-started/install-rt-kernel-i386.asciidoc
@@ -3,7 +3,7 @@
 
 :skip-front-matter:
 
-= Xenomai realtime kernel
+= Xenomai realtime kernel (i386)
 
 Choose and copy and paste the following into a shell to install your kernel:
 
