--- a/docs/man/man9/adxl345.asciidoc
+++ b/docs/man/man9/adxl345.asciidoc
@@ -1,3 +1,15 @@
+---
+edit-branch: "master"
+edit-repo: "https://github.com/mhaberler/machinekit"
+edit-path: "src/hal/user_comps/adxl345.comp"
+---
+
+edit-path from frontmatter={{page.edit-path}}
+
+edit-repo from frontmatter={{page.edit-repo}}
+
+page.path from frontmatter={{page.path}}
+
 = Machinekit Documentation
 
 == HAL Component -- ADXL345
