--- a/community/contributing.asciidoc
+++ b/community/contributing.asciidoc
@@ -6,7 +6,7 @@ permalink: /community/contributing/
 
 == Background
 
-MachineKit adheres to the link:c4[C4 Collective Code Construction Contract],
+MachineKit adheres to the link:../c4[C4 Collective Code Construction Contract],
 which describes a link:https://help.github.com/articles/using-pull-requests/[Fork/Pull model of development]:
 
 > The Fork & Pull Model lets anyone fork an existing repository and
