Scripted indexes for man pages
index-gen.sh added to generate index docs on the fly at each build
from a Makefile

docs/index.asciidoc amended to promote reading of docs not asking help

_config.yml edit to switch on incremental builds

Entire docs/components dir deleted as these now are generated in docs/man/man9

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -4,14 +4,16 @@
 :skip-front-matter:
 = Machinekit Main Index
 
-Before asking questions on the google group Machinekit list,
-please make sure you have read:
-
-- link:../docs/getting-help[Getting help]
+- link:../docs/index-getting-started[Getting Started]
 
 - link:../docs/index-user[User manual]
-- link:../docs/index-getting-started[Getting started manual]
 - link:../docs/index-HAL[HAL manual]
 - link:../docs/index-integrator[Integrator manual]
 - link:../docs/index-developer[Developer manual]
 - link:../docs/documenting/documenting[Documenting manual]
+
+Before asking questions on the google group Machinekit list,
+please make sure you have read:
+
+- link:../docs/getting-help[Getting Help]
+
