Auto generation man page indexes - Pt2
index-gen.sh amended to output the paths relative to the top level index-HAL.asciidoc

This is now the sole portal to the HAL Man Pages and the complexity of getting paths
right under jekyll, means this is how they have to be output, even if that means the
generated index.html not being stand alone.

Makefile added to automate the scripting of the indexes

All 3 man types now generated and accessible from index-HAL.asciidoc

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/index-HAL.asciidoc
+++ b/docs/index-HAL.asciidoc
@@ -23,11 +23,9 @@ include::{{page.docs-dir}}/hal/general_ref.asciidoc[]
 
 include::{{page.docs-dir}}/hal/parallel_port.asciidoc[]
 
-include::{{page.docs-dir}}/hal/components.asciidoc[]
-
-link:../index-instantiated-components[HAL Instantiated Component Man Pages]
-
 include::{{page.docs-dir}}/hal/rtcomps.asciidoc[]
+
+include::{{page.docs-dir}}/man/man9/index.asciidoc[]
 
 include::{{page.docs-dir}}/hal/halmodule.asciidoc[]
 
@@ -36,6 +34,8 @@ include::{{page.docs-dir}}/hal/canonical-devices.asciidoc[]
 include::{{page.docs-dir}}/hal/tools.asciidoc[]
 
 include::{{page.docs-dir}}/hal/halshow.asciidoc[]
+
+include::{{page.docs-dir}}/man/man1/index.asciidoc[]
 
 :leveloffset: -1
 
@@ -48,6 +48,8 @@ link:../developing/writing-components[Writing HAL Components]
 include::{{page.docs-dir}}/hal/instcomp.asciidoc[]
 
 include::{{page.docs-dir}}/hal/comp.asciidoc[]
+
+include::{{page.docs-dir}}/man/man3/index.asciidoc[]
 
 :leveloffset: -1
 
