--- a/docs/index-HAL.asciidoc
+++ b/docs/index-HAL.asciidoc
@@ -25,7 +25,7 @@ include::{{page.docs-dir}}/hal/parallel_port.asciidoc[]
 
 include::{{page.docs-dir}}/hal/rtcomps.asciidoc[]
 
-include::{{page.docs-dir}}/man/man9/index.asciidoc[]
+link:http://preview.machinekit.io/docs/man/man9/index.asciidoc[Component Man Pages]
 
 include::{{page.docs-dir}}/hal/halmodule.asciidoc[]
 
@@ -35,7 +35,7 @@ include::{{page.docs-dir}}/hal/tools.asciidoc[]
 
 include::{{page.docs-dir}}/hal/halshow.asciidoc[]
 
-include::{{page.docs-dir}}/man/man1/index.asciidoc[]
+link:http://preview.machinekit.io/docs/man/man1/index.asciidoc[HAL Utilities and GUIs]
 
 :leveloffset: -1
 
@@ -49,7 +49,7 @@ include::{{page.docs-dir}}/hal/instcomp.asciidoc[]
 
 include::{{page.docs-dir}}/hal/comp.asciidoc[]
 
-include::{{page.docs-dir}}/man/man3/index.asciidoc[]
+link:http://preview.machinekit.io/docs/man/man3/index.asciidoc[RTAPI and HAL functions]
 
 :leveloffset: -1
 
