--- a/docs/hal/components.asciidoc
+++ b/docs/hal/components.asciidoc
@@ -20,8 +20,8 @@ To view the information in the man page, in a terminal window type:
 man axis (or perhaps 'man 1 axis' if your system requires it.)
 ----
 
-Now you can also view the Machinekit specific Instantiated Component man pages online
-link:../../../machinekit-documentation/index-instantiated-components[Here]
+Now you can also view the Machinekit specific component Man Pages on-line
+link:../../man/man9/index.html[Here]
 
 axis:: AXIS Machinekit (The Enhanced Machine Controller) Graphical User Interface.
 axis-remote:: AXIS Remote Interface.
