--- a/docs/getting-started/install-rt-kernel-amd64.asciidoc
+++ b/docs/getting-started/install-rt-kernel-amd64.asciidoc
@@ -17,7 +17,7 @@ sudo apt-get install linux-image-xenomai.x86-amd64 	  # amd64
 There is currently no stock Debian RT-PREEMPT kernel for Jessie; the machinekit apt repository provides
 several known-to work kernels. 
 
-If you want to build your own kernel, see link:../../developing/building-rt-preempt-kernel[this document] for details.
+If you want to build your own kernel, see link:../developing/building-rt-preempt-kernel[this document] for details.
 
 Choose and copy and paste the following into a shell to
 install your kernel:
