--- a/docs/config/stepconf.asciidoc
+++ b/docs/config/stepconf.asciidoc
@@ -107,7 +107,7 @@ step pulse in nanoseconds.  If your not sure about this setting a value of
 
 * 'Base Period Maximum Jitter' - Enter the result of the Latency Test here.
 To run a latency test press the 'Test Base Period Jitter' button. See the
-link:../../install/Latency_Test[Latency Test] section for more details.
+link:../install/Latency_Test[Latency Test] section for more details.
 
 * 'Max Step Rate' -Stepconf automatically calculates the Max Step Rate based
 on the driver characteristics entered and the latency test result.
