--- a/docs/setting-up/developing-setting-up.asciidoc
+++ b/docs/setting-up/developing-setting-up.asciidoc
@@ -11,5 +11,5 @@ specific applications for Machinekit. This page will collect relevant links and
 instructions.
 
 . link:../CAN-developing-setup[Setup for CAN development]
-. link:../../developing/machinekit-developing[General Development Setup and packages]
+. link:../developing/machinekit-developing[General Development Setup and packages]
 . please add other sections / subjects / busses here.
