Test article into Sandbox
Test functionality of posting articles, solely using the 'Edit this Page' link

--- a/docs/sandbox/index.asciidoc
+++ b/docs/sandbox/index.asciidoc
@@ -43,7 +43,7 @@ Commit as a PR again and before long your article will be visible to all
 === Sandbox Articles
 
 
-// - link:unused01[Title link of page here - date here]
+- link:unused01[Test article - 20-05-2016]
 
 // - link:unused02[Title link of page here - date here]
 
