--- a/docs/developing/developing.asciidoc
+++ b/docs/developing/developing.asciidoc
@@ -10,8 +10,8 @@ how to set up a minimal system.
 
 starting at point 1 should lead you thru the next steps and return you to this page.
 
-. link:../getting-started/installing-packages.asciidoc#configure-apt[Configure Apt]
-. link:../getting-started/installing-packages.asciidoc#install-RT-kernel[Install the kernel of your choice]
+. link:http://preview.machinekit.io/docs/getting-started/installing-packages.asciidoc#configure-apt[Configure Apt]
+. link:http://preview.machinekit.io/docs/getting-started/installing-packages.asciidoc#install-RT-kernel[Install the kernel of your choice]
 . link:../machinekit-developing[Install developing packages for Machinekit]
 
 == Other instructions for specific development
