--- a/docs/install/Latency_Test.asciidoc
+++ b/docs/install/Latency_Test.asciidoc
@@ -60,7 +60,7 @@ You should see something like this:
 
 .HAL Latency Test
 
-image::latency.png[align="center"]
+image::http://preview.machinekit.io/docs/config/images/latency.png[align="center"]
 
 While the test is running, you should 'abuse' the computer. 
 Move windows around on the screen. Surf the web. Copy some large files 
