--- a/docs/developing/develop-index.asciidoc
+++ b/docs/developing/develop-index.asciidoc
@@ -2,23 +2,23 @@
 ---
 
 :skip-front-matter:
-= Machinekit Developing Index
+= Developing Index
 
-link:developing[General links inc. setting up the environment]
+link:../developing[General links inc. setting up the environment]
 
-link:machinekit-developing[Specific building from source stuff]
+link:../machinekit-developing[Specific building from source stuff]
 
-link:rtfaults[How to debug rt faults]
+link:../rtfaults[How to debug rt faults]
 
-link:building-rt-preempt-kernel[Building your own rt-preempt kernel]
+link:../building-rt-preempt-kernel[Building your own rt-preempt kernel]
 
-link:rt-kernel-config[The actual kernel config to use as a start for rt-preempt kernel]
+link:../rt-kernel-config[The actual kernel config to use as a start for rt-preempt kernel]
 
-link:writing-components[General info and links re writing components]
+link:../writing-components[General info and links re writing components]
 
-link:toolchangers[Specific info on writing toolchanger components]
+link:../toolchangers[Specific info on writing toolchanger components]
 
-link:CAN-developing[Information on developing using CAN]
+link:../CAN-developing[Information on developing using CAN]
 
 
 
