--- a/docs/gui/gladevcp.asciidoc
+++ b/docs/gui/gladevcp.asciidoc
@@ -435,7 +435,7 @@ Options:
 
 -t THEME::
     set gtk theme. Default is system theme. Different panels can have different themes.
-    An example theme can be found in the http://wiki.machinekit.org/cgi-bin/wiki.pl?GTK_Themes[EMC Wiki].
+    An example theme can be found in the http://wiki.linuxcnc.org/cgi-bin/wiki.pl?GTK_Themes[EMC Wiki].
 
 -x XID::
      Re-parent GladeVCP into an existing window XID instead of creating a
@@ -2679,4 +2679,4 @@ arise. For details, see the `keyboard_forward()` function in
 == Adding Custom Widgets
 
 The Machinekit Wiki has information on adding custom widgets to GladeVCP.
-link:http://wiki.machinekit.org/cgi-bin/wiki.pl?GladeVCP_Custom_Widgets[GladeVCP Custom Widgets]
+link:http://wiki.linuxcnc.org/cgi-bin/wiki.pl?GladeVCP_Custom_Widgets[GladeVCP Custom Widgets]
