--- a/docs/quickstart/stepper_quickstart.asciidoc
+++ b/docs/quickstart/stepper_quickstart.asciidoc
@@ -46,7 +46,7 @@ Gather the information about each axis of your machine.
 Drive timing is in nano seconds. If you're unsure about the timing
 many popular drives are included in the stepper configuration wizard.
 Note some newer Gecko drives have different timing than the original
-one. A http://wiki.machinekit.org/[list] is also on the user maintained Machinekit
+one. A http://wiki.linuxcnc.org/[list] is also on the user maintained Machinekit
 wiki site of more drives.
 
 [width="100%", options="header"]
