--- a/docs/developing/CAN-developing.asciidoc
+++ b/docs/developing/CAN-developing.asciidoc
@@ -19,10 +19,8 @@ comfortable with the CAN interface. SocketCAN is native to Linux, and
 we can use SocketCAN when developing so there is no need for hardware
 or devices.
 
-You should probably have a go at this link:http://www.can-cia.org/fileadmin/cia/files/icc/13/kleine-budde.pdf[document which describes socketcan]
-to get a little background of what SocketCAN is. When we have used
-SocketCAN then the real hardware works in the same way. Only difference will be
-that we swap the driver to the real hardware.
+Here are http://events.linuxfoundation.org/sites/events/files/slides/elce2013-Kleine-Budde.pdf[good overview of the SocketCAN Linux subsystem], and a  http://www.can-cia.org/fileadmin/resources/documents/proceedings/2012_kleine-budde.pdf[more detailed article]
+You should probably have a go at this link:http://www.can-cia.org/fileadmin/cia/files/icc/13/kleine-budde.pdf[document which describes socketcan]. Note that much development work can be done without real hardware - just using a virtual can interface.
 
 
 . Install a Virtual Machine. The one used in these examples is Debian Jessie,
