--- a/docs/documenting/documenting.asciidoc
+++ b/docs/documenting/documenting.asciidoc
@@ -38,13 +38,13 @@ link:../updating-your-fork[updating your fork] instructions.
 
 - click on the file you want to change and edit the contents.
 
-image::editing-a-file.png[]
+image::editing-a-file.png[align="left", scaledwidth="90%"]
 - when you're done scroll down.
   * give a good commit message, like `<the file you changed>: <what you did>`
   * optionally more info.
   * push the `commit` button
 
-image::committing-changes.png[]
+image::committing-changes.png[align="left", scaledwidth="90%"]
 
 - this will make the commit in your forked repo.
 
@@ -56,14 +56,14 @@ by creating a ``Pull Request'' or `PR` for short.
 
 - notice the green button to compare for a pull request below?
 
-image::compare-for-PR.png[]
+image::compare-for-PR.png[align="left", scaledwidth="90%"]
 
 - Pushing this button will get you to the next screen where you can create your comments
 for the `PR`. Also remember to describe this in the way you did when you created
 your commit. this will help a maintainer understand what you did, and why. So then
 the review will be much easier to understand.
 
-image::create-PR-to-original.png[]
+image::create-PR-to-original.png[align="left", scaledwidth="90%"]
 
 - when you finished this the maintainers of the project will get a message and can
 review your change.
